Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,11 +9,27 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: 
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script test'
+stages:
+  - stage:
+    displayName: My first stage
+    jobs:
+      - job:
+        displayName: My frist job
+        steps:
+          - script: echo Hello, world!
+            displayName: 'Run a one-line script'
+
+          - script: |
+              echo Add other tasks to build, test, and deploy your project.
+              echo See https://aka.ms/yaml
+            displayName: 'Run a multi-line script test'
+            
+  - stage:
+    displayName: My second stage
+    jobs:
+      - job:
+        displayName: My frist job
+        steps:
+          - script: echo Hello, world!
+            displayName: 'Run a one-line script'
