--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,3 +55,12 @@ stages:
           - publish: fisier.txt
             name: guru
             displayName: Bau bau
+      -job:
+        displayName: Build C# programm
+        steps:
+          - script: |
+              dotnet build SimpleApp/SimpleApp.sln
+
+          - publish: SimpleApp/bin/Debug/net6.0
+            name: CSharp
+            displayName: CSharp Simple App Build 
