Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ stages:
         displayName: Build C# programm
         steps:
           - script: |
-              dotnet build SimpleApp/SimpleApp.sln -r win10-x64
+              dotnet build SimpleApp/SimpleApp/SimpleApp.csproj -r win10-x64
 
           - publish: SimpleApp/SimpleApp/bin/Debug/net6.0
             name: CSharp
