--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,4 +77,16 @@ stages:
           - publish: Javascript/mocha
             name: Javascript
             displayName: Javascript Mocha Unit tests
+      
+      - job:
+        displayName: Javascript program
+        steps: 
+          - task: UsePythonVersion@0
+            displayName: 'Use Python 3.9'
+            inputs:
+              versionSpec: '3.9'
+           
+          - script: |
+              python Demo.py
+            workingDirectory: Python
            
