--- a/build_pipelines.yml
+++ b/build_pipelines.yml
@@ -20,3 +20,11 @@ stages:
             name: CSharp
             displayName: Publish CSharp Program
             artifact: CSharp
+            
+      - job:
+        displayName: Run Python program
+        steps:
+          - script: |
+              python helloworld.py
+            workingDirectory: Python
+            displayName: Run Python Program
